# bulk-renamer

./: .gitignore  CMakeLists.txt  README.md  meson.build
data/: batch-renamer.contract  bulk-renamer.contract  com.github.jeremypw.bulk-renamer.appdata.xml.in  com.github.jeremypw.bulk-renamer.desktop.in  com.github.jeremypw.redub.appdata.xml.in  com.github.jeremypw.redub.desktop.in  io.github.jeremypw.bulk-renamer.appdata.xml.in  io.github.jeremypw.bulk-renamer.desktop.in  io.github.jeremypw.bulk-renamer.gschema.xml  meson.build  redub.contract
debian/: changelog  control  copyright
po/: POTFILES  fr.po  io.github.jeremypw.bulk-renamer.pot  meson.build
po/extra/: POTFILES  extra.pot  fr.po
src/: Application.vala  BatchRenamer.vala  BulkRenamer.vala  Enums.vala  Modifier.vala  Window.vala  meson.build
